# utils

./: README.md
lscpu/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile.in  NEWS  README  configure  configure.in  lscpu-1.8.lsm  lscpu.1  lscpu.c
mmw/: AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  configure  configure.in  mmw-2.0.lsm  mmw.1  mmw.c
