dnl Process this file with autoconf to produce a configure script.
AC_INIT(lscpu.c)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile)
